tdf#117949 Use small overlap for SVG gradient representation

Change-Id: Idd55df31aa87cc40dbb15001479cdc79e918ac19